修复BUG和依赖